# expense_tracker

./: .gitignore  AUTH_SETUP.md  Home.py  Home_staging.py  app.py  bootstrap.py  home_page.py  processing.py  pyproject.toml  requirements.txt  run_staging.sh  state.py  ui_styles.py
.github/scripts/: keepalive.js
.github/workflows/: keepalive.yml
.streamlit/: config.toml
config/: auth_users.yaml  constants.py  exchange_rates.py
pages/: 📊_Dashboard.py  📥_Imports.py  🔒_Private_Dashboard.py  🧾_Classify_Imports.py
scripts/: generate_auth_users.py
scripts/config/: auth_users.yaml
services/: auth_service.py  gemini_service.py  google_sheets.py  project_summary.py
