[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-generativeai>=0.9.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "plotly>=5.24.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "streamlit>=1.40.2",
]
